--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -106,13 +106,16 @@
       </clr-vertical-nav-group>
       <clr-vertical-nav-group routerLinkActive="active">
         <clr-icon shape="flame" clrVerticalNavIcon></clr-icon>
-        Fire
+        Allscheduler
         <clr-vertical-nav-group-children>
-          <a clrVerticalNavLink routerLink="./fire/charmander" routerLinkActive="active">
-            Charmander
+          <a clrVerticalNavLink routerLink="./scheduler" routerLinkActive="active">
+            scheduler
           </a>
-          <a clrVerticalNavLink routerLink="./fire/charizard" routerLinkActive="active">
-            Charizard
+          <a clrVerticalNavLink routerLink="./pipeline" routerLinkActive="active">
+            schedule_pipeline
+          </a>
+          <a clrVerticalNavLink routerLink="./scheduleinfo" routerLinkActive="active">
+            scheduler_Info
           </a>
         </clr-vertical-nav-group-children>
       </clr-vertical-nav-group>
