changes ui and sheduler

--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -109,7 +109,7 @@
         Allscheduler
         <clr-vertical-nav-group-children>
           <a clrVerticalNavLink routerLink="./scheduler" routerLinkActive="active">
-            scheduler
+            scheduler_Completed_pipeline
           </a>
           <a clrVerticalNavLink routerLink="./pipeline" routerLinkActive="active">
             schedule_pipeline
