--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/module-card/module-card.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/module-card/module-card.component.html
@@ -41,7 +41,7 @@
                       <clr-icon class="alert-icon" shape="info-circle"></clr-icon>
                   </div>
                   <span class="alert-text">
-                      Sorry. No module apps could be found.
+                      Sorry. No module apps could be found.<clr-spinner>Loading ...</clr-spinner>
                   </span>
               </div>
           </div>
