--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/project-card/project-card.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/project-card/project-card.component.html
@@ -49,6 +49,7 @@
                   </div>
                   <span class="alert-text">
                       Sorry. No project apps could be found.
+                      <clr-spinner>Loading ...</clr-spinner>
                   </span>
               </div>
           </div>
