--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/project-setup1/project-setup1.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/project-setup1/project-setup1.component.html
@@ -12,6 +12,6 @@
   </button>
 
 </div>
-<app-project-card *ngIf="gridViewIsActive" [apps]="apps"></app-project-card>
-<app-allprojectsetup *ngIf="!gridViewIsActive" [apps]="apps" (deletedApp)="loadApps()"></app-allprojectsetup>
+<app-project-card *ngIf="!gridViewIsActive" [apps]="apps"></app-project-card>
+<app-allprojectsetup *ngIf="gridViewIsActive" [apps]="apps" (deletedApp)="loadApps()"></app-allprojectsetup>
 
