--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/schedulerinfo/schedulerinfo.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/schedulerinfo/schedulerinfo.component.html
@@ -32,7 +32,7 @@
           </div>
           <div class="clr-col-md-4 clr-col-sm-12">
             <label for="name">StartTime<span class="required-field">*</span></label>
-           <input type="text" class="clr-input" formControlName="startTime" placeholder="dd-mm-yy hh-mm-ss" value="2022-03-04 17-25-00">
+           <input type="datetime-local" class="clr-input" formControlName="startTimeString" placeholder="dd-mm-yy hh-mm-ss" >
           </div>
           <div class="clr-col-md-4 clr-col-sm-12">
             <label for="name">Job Name<span class="required-field">*</span></label>
