--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe-card/wireframe-card.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe-card/wireframe-card.component.html
@@ -37,7 +37,7 @@
                       <clr-icon class="alert-icon" shape="info-circle"></clr-icon>
                   </div>
                   <span class="alert-text">
-                      Sorry. No wireFrames apps could be found.
+                      Sorry. No wireFrames apps could be found.<clr-spinner>Loading ...</clr-spinner>
                   </span>
               </div>
           </div>
