--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/module-setup1/module-setup1.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/module-setup1/module-setup1.component.html
@@ -23,8 +23,8 @@
         <button class="btn btn-primary"  (click)="goToAdd()"> <clr-icon shape="plus"></clr-icon>ADD</button>
 
       </div>-->
-      <app-module-card *ngIf="gridViewIsActive" [apps]="apps"></app-module-card>
-      <app-allmodule-setup *ngIf="!gridViewIsActive" [apps]="apps" (deletedApp)="loadApps()"></app-allmodule-setup>
+      <app-module-card *ngIf="!gridViewIsActive" [apps]="apps"></app-module-card>
+      <app-allmodule-setup *ngIf="gridViewIsActive" [apps]="apps" (deletedApp)="loadApps()"></app-allmodule-setup>
 
     </clr-tab-content>
   </clr-tab>
