--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/layout/layout.component.html
@@ -117,6 +117,12 @@
           <a clrVerticalNavLink routerLink="./scheduleinfo" routerLinkActive="active">
             scheduler_Info
           </a>
+          <a clrVerticalNavLink routerLink="./webservices profile" routerLinkActive="active">
+            webservices profile
+          </a>
+          <a clrVerticalNavLink routerLink="./oauth" routerLinkActive="active">
+            oauth
+          </a>
         </clr-vertical-nav-group-children>
       </clr-vertical-nav-group>
       <clr-vertical-nav-group routerLinkActive="active">
