--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/addwireframe/addwireframe.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/addwireframe/addwireframe.component.html
@@ -105,8 +105,8 @@
 
     <div class="center">
       <button type="submit" class="btn btn-primary" [disabled]="!entryForm.valid">SUBMIT</button>
-      <button type="submit" class="btn btn-primary" (click)="submit2()">SUBMIT2</button>
-      <button type="submit" class="btn btn-primary" (click)="submit2()">SUBMIT3</button>
+      <!--<button type="submit" class="btn btn-primary" (click)="submit2()">SUBMIT2</button>
+      <button type="submit" class="btn btn-primary" (click)="submit2()">SUBMIT3</button>-->
     </div>
 
   </form>
