wireframe data update and add with headerid

--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/edit2wireframe/edit2wireframe.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/edit2wireframe/edit2wireframe.component.html
@@ -908,9 +908,9 @@
           <button
             type="submit"
             class="btn btn-outline text"
-            (click)="updateModal()"
+            (click)="addModal()"
           >
-            <b>UPDATE</b>
+            <b>Add Data</b>
           </button>
           <button
             type="submit"
