--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/allwireframe/allwireframe.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/allwireframe/allwireframe.component.html
@@ -44,8 +44,8 @@
       <clr-dg-action-overflow>
 
         <!--<button class="action-item" (click)="goToEdit(user.id)">Edit <clr-icon shape="edit" class="is-error"></clr-icon></button>-->
-        <button class="action-item" (click)="goToEdit2(user.id)">Edit2 <clr-icon shape="edit" class="is-error"></clr-icon></button>
-        <button class="action-item" (click)="update(user.id)">Update<clr-icon shape="edit" class="is-error"></clr-icon></button>
+        <button class="action-item" (click)="goToEdit2(user.id)">Add wireframe dragdrop <clr-icon shape="edit" class="is-error"></clr-icon></button>
+        <button class="action-item" (click)="update(user.id)">Update wireframe dragdrop<clr-icon shape="edit" class="is-error"></clr-icon></button>
         <button class="action-item" (click)="onDelete(user)">Delete<clr-icon shape="trash" class="is-error"></clr-icon></button>
         <button  class="action-item" type="button"  (click)="buildDynamicForm(user)">Build</button>
       </clr-dg-action-overflow>
