--- a/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/edit2wireframe/edit2wireframe.component.html
+++ b/springboot/angular-clarity-master/angular-clarity-master/src/app/modules/main/wireframe/edit2wireframe/edit2wireframe.component.html
@@ -57,6 +57,10 @@
       </div>
     </div>
     <div class="col-10">
+      <div class="form-group" style="margin-bottom: 0px !important; padding: 30px 60px 5px 60px;">
+				<h2><input class="form-control" type="text" [(ngModel)]="model.name" style="font-size: 20px;" /></h2>
+				<input class="form-control" type="text" [(ngModel)]="model.description" />
+			</div>
       <ng-template #recursiveList let-list>
         <section
           dndDropzone
